--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,12 +11,14 @@ server.port=8081
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.hibernate.ddl-auto=create-drop
 
+# DevTools
+spring.devtools.add-properties=false
+
 # H2 Teste em memoria
-spring.datasource.url=jdbc:h2:file:~/sisconp
+spring.datasource.url=jdbc:h2:file:~/dio
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # H2 Settings
 spring.h2.console.enabled=true
