--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,11 +15,14 @@ server.port=8081
 spring.devtools.add-properties=false
 
 # H2 Teste em memoria
-spring.datasource.url=jdbc:h2:file:~/dio
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:file://C:/Dev/h2/dio/sisconp
 spring.datasource.username=sa
 spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=update
 
 # H2 Settings
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
+
+spring.jpa.show-sql = true
