--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,14 +15,15 @@ server.port=8081
 spring.devtools.add-properties=false
 
 # H2 Teste em memoria
-spring.datasource.url=jdbc:h2:file://C:/Dev/h2/dio/sisconp
+spring.datasource.url=jdbc:h2:file://C:/Dev/h2/dio/sisconp;DATABASE_TO_UPPER=false
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 # H2 Settings
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
-spring.jpa.show-sql = true
+spring.jpa.show-sql=true
